Fix all modal components using React Portal to avoid overflow hidden issue

--- a/frontend/src/components/OrderSubmitSection.css
+++ b/frontend/src/components/OrderSubmitSection.css
@@ -39,7 +39,7 @@
 
 .order-back-button,
 .order-submit-button {
-  padding: 10px 10px;
+  padding: 0px 10px;
   border: none;
   border-radius: 3px;
   font-size: 16px;
